handle some errors

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,7 @@
 
     <string name="s_user_info">User Info</string>
 
+    <string name="s_no_network_connection">There is network connection. Please turn on wi-fi or 3g/4g. Please restart the app.</string>
+    <string name="s_api_error">Something went wrong. Please restart the app.</string>
+
 </resources>
