--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="s_post_info">Post info</string>
     <string name="s_comment_info">Comment Info</string>
 
-    <string name="s_no_network_connection">There is network connection. Please turn on wi-fi or 3g/4g. Please restart the app.</string>
+    <string name="s_no_network_connection">There is no network connection. Please turn on wi-fi or 3g/4g. Please restart the app.</string>
     <string name="s_error">Something went wrong. Please restart the app.</string>
     <string name="s_task_running">Task is already running. Please wait while it will be finished.</string>
 
